<resources>
    <string name="app_name">Notebook</string>
    <string name="search_notes">Искать в заметках</string>
    <string name="note_title">Заголовок</string>
    <string name="note_subtitle">Подзаголовок</string>
    <string name="type_note_here">Пишите текст здесь</string>
    <string name="miscellaneous">Добавление</string>
    <string name="pick_color">Выберите цвет</string>
    <string name="add_image">Добавить изображение</string>
    <string name="add_url">Добавить URL</string>
    <string name="enter_url">Введите URL</string>
    <string name="add">Добавить</string>
    <string name="delete_note">Удалить заметку</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Вы уверены что хотите удалить эту заметку?</string>
    <string name="cancel">Отменить</string>
    <string name="change_app_theme">Сменить тему приложения</string>
    <string name="change_app_theme_to_light_dark">Сменить тему на светлую/темную</string>
    <string name="about_app">О приложении</string>
    <string name="app_description">Описание приложения</string>
    <string name="app_theme">Тема приложения</string>
    <string name="change_app_theme_to_dark_light">Сменить тему на светлую/темную</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="timeHour">10:00</string>
    <string name="event3">Событие №3</string>
    <string name="event2">Событие №2</string>
    <string name="event1">Событие №1</string>
    <string name="event">Событие</string>
    <string name="centerDate">Июнь 2005</string>
    <string name="sun">ВС</string>
    <string name="mon">ПН</string>
    <string name="tue">ВТ</string>
    <string name="wed">СР</string>
    <string name="thur">ЧТ</string>
    <string name="fri">ПТ</string>
    <string name="sat">СБ</string>
    <string name="newEvent">добавить новое событие</string>
    <string name="changingTheme">Изменить тему:</string>
    <string name="change_to_dark_mode">Изменить тему приложения?</string>
    <string name="to_weekly_plan">к плану на неделю</string>
    <string name="suturnday">Суббота</string>
    <string name="save">Сохранить</string>
    <string name="time">Время:</string>
    <string name="date">Дата:</string>
    <string name="to_day_plan">к планам на день</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="events">Событие:</string>
    <string name="changetheme">Изменить тему</string>
    <string name="version">Версия 1.0.0</string>
    <string name="close">Закрыть</string>
    <string name="all_tasks">Все задачи:</string>
    <string name="add_task">Добавить задачу</string>
    <string name="fillup_tasks">Заполните следущие пункты, чтобы добавить задачу</string>
    <string name="title_task">Заголовок задачи</string>
    <string name="discrp">Описание</string>
    <string name="Date">Дата</string>
    <string name="add_event">Добавить событие</string>
    <string name="complited">Вы завершили эту задачу!</string>
    <string name="done">Сделано</string>
    <string name="all_see_tasks">Ко всем задачам</string>
    <string name="month">Июнь</string>
    <string name="compl">Завершено</string>
    <string name="delete_confirmation">Подтвердите</string>
    <string name="sureToDelete">Вы уверены что хотите удалить эту задачу?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirmation">Завершите задачу!..</string>
    <string name="sureToMarkAsComplete">Вы уверены, что хотите завершить эту задачу?.</string>
    <string name="congrats_you_have_completed_the_task_successfully">Вы завершили эту задачу!</string>

    <string name="are_you_sure_you_want_to_delete_this_task">Вы уверен что хотите удалить эту задачу?</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="comp">Завершить задачу</string>
    <string name="cha">Изменить</string>
    <string name="del">Удалить</string>

</resources>