<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activites.WeekViewActivity"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/imgBackWCalendar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:tint="@color/colorIcons2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/to_day_plan"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="dailyAction"
        android:fontFamily="@font/ubuntu_regular"
        android:textSize= "@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_bold"
            android:onClick="previousWeekAction"
            android:src="@drawable/ic_back"
            android:textColor="@color/colorTextHint"
            app:tint="@color/colorIcons2"
            android:textSize="@dimen/_20sdp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/monthYearTV2"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/centerDate"
            android:textSize="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/ubuntu_bold"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="previousWeekAction"
            android:src="@drawable/ic_next"
            app:tint="@color/colorIcons2"
            android:textSize="@dimen/_20sdp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/colorTextHint"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textColor="@color/colorTextHint"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textColor="@color/colorTextHint"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textColor="@color/colorTextHint"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:textColor="@color/colorTextHint"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textColor="@color/colorTextHint"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textColor="@color/colorTextHint"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"/>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:foregroundTint="@color/colorBlack"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="newEventAction"
        android:layout_gravity="center"
        android:textSize="@dimen/_10sdp"/>

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:foregroundTint="@color/colorBlack"/>


</LinearLayout>
