<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activites.CalendarActivity"

    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/imgBackCalendar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:tint="@color/colorIcons2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/ubuntu_regular"
            android:onClick="weeklyAction"
            android:text="@string/to_weekly_plan"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_1sdp">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_back"
                android:textColor="@color/colorTextHint"
                android:background="@null"
                android:textStyle="bold"
                android:onClick="previousMonthAction"
                />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/centerDate"
                android:textSize="@dimen/_15sdp"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/ubuntu_regular"
                />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_next"
                android:textColor="@color/colorTextHint"
                android:background="@null"
                android:textStyle="bold"
                android:onClick="nextMonthAction"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textColor="@color/colorTextHint"
                android:textAlignment="center"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textColor="@color/colorTextHint"
                android:textAlignment="center"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textColor="@color/colorTextHint"
                android:textAlignment="center"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textColor="@color/colorTextHint"
                android:textAlignment="center"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thur"
                android:textColor="@color/colorTextHint"
                android:textAlignment="center"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textColor="@color/colorTextHint"
                android:textAlignment="center"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textColor="@color/colorTextHint"
                android:textAlignment="center"
                android:textSize="@dimen/_13ssp"/>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>




</LinearLayout>