<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.DailyCalendarActivity"
    android:backgroundTint="@color/colorPrimary">
    <ImageView
        android:id="@+id/imgBackDCalendar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:tint="@color/colorIcons2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_15sdp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_back"
            android:textColor="@color/colorTextHint"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="previousDayAction"
            android:textSize="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/monthDayText"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/centerDate"
            android:textSize="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/ubuntu_regular"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_next"
            android:textColor="@color/colorTextHint"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="nextDayAction"
            android:textSize="@dimen/_10sdp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/dayOfWeekTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suturnday"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textColor="@color/colorTextHint"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/ubuntu_medium"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newEvent"
        android:textColor="@color/colorAccent"
        android:background="@null"
        android:onClick="newEventAction"
        android:layout_gravity="center"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_medium"/>

    <ListView
        android:id="@+id/hourListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>